syntax = "proto3";
package kioraproto;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/sinkingpoint/internal/dto/kioraproto";

message PostAlertsMessage {
    repeated Alert alerts = 1;
}

message Alert {
    map<string, string> labels = 1;
    map<string, string> annotations = 2;
    AlertStatus status = 3;
    google.protobuf.Timestamp startTime = 4;
    google.protobuf.Timestamp endTime = 5;
}

// AlertStatus is the status of the alert coming in.
enum AlertStatus {
    firing = 0;
    resolved = 1;
    processing = 2;
}
